@@ -4,13 +4,13 @@ can download it from here:
 	http://www.cmake.org/cmake/resources/software.html
 	
 CMake is a cross-platform system for build automation. It can
-generate Visual Studio project files on Windows, XCode project files
+generate Visual Studio project files on Windows, Xcode project files
 on Mac OS X and Makefiles on Unix systems. After installing CMake,
 you can see a list of generators provided on your system by typing
 "cmake" in your terminal and pressing enter. The supported generators
 should be listed near the bottom of the printout.
 
-Qt 4.5.0 is also required on all platforms. It can be donwloaded from
+Qt 4.5.0 is also required on all platforms. It can be downloaded from
 here (choose the LGPL version): http://www.qtsoftware.com/downloads 
 
 Mac users should grab the Qt SDK. Windows users can also download the
@@ -20,7 +20,7 @@ distribution and compile it with VS. Linux users should get it from
 their distribution's package manager (more information in the linux
 section).
 
-= Windows =
+= Compiling on Windows =
 
 It is assumed you want to generate Visual Studio project files. You can
 do this by creating a new folder OUTSIDE of the source distribution.
@@ -40,7 +40,7 @@ http://www.qtsoftware.com/downloads/visual-studio-add-in
 This will make it easier to develop Qt applications like Sigil, but is not
 strictly necessary. 
 
-= Mac =
+= Compiling on Mac =
 
 It is assumed you want to generate Xcode project files. You can
 do this by creating a new folder OUTSIDE of the source distribution.
@@ -52,11 +52,11 @@ cmake -G Xcode /path/to/source/folder
 
 This should create Xcode project files in that directory.
 
-= Linux =
+= Compiling on Linux =
 
 Aside from the core Qt libraries, you will also need to install libqt4-xml,
-libqt4-svg and libqt4-webkit (and their various dependencies) which are not
-included by default in Qt.
+libqt4-svg, libqt4-webkit and libqt4-dev (and their various dependencies)
+which are not included by default in Qt.
 
 This should be as simple as typing in the following command into your
 terminal (on Debian-like systems):
@@ -83,3 +83,14 @@ cmake -DCMAKE_INSTALL_PREFIX=/new/install/prefix -G "Unix Makefiles" /path/to/so
 
 Building from source in the repository is recommended, since code in the
 repository should always be stable. If it's not, that's a bug report. 
+
+= Compiling Qt =
+
+Compiling Qt directly should not be necessary. Nevertheless, if you wish to
+compile Qt so you could for instance use the Visual Studio compiler, you 
+should configure them before compiling like this:
+
+configure -qt-zlib -qt-gif -qt-libpng -qt-libmng -qt-libtiff -qt-libjpeg
+
+These are the options used to configure the Qt libraries that are provided
+with Sigil on Windows.
